<resources>
    <string name="app_name">MeetApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="title">Title</string>
    <string name="login">Login</string>
    <string name="ok">OK</string>
    <string name="forgot_password">Forgot password</string>
    <string name="no_account">Need an account? Create one</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_reset">Password reset</string>
    <string name="email_address">Email address</string>
    <string name="reset_my_pass">Reset my password</string>
    <string name="reset_my_pass_text">Please enter your email address in field above to reset password</string>
    <string name="create_account">Create Account</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_birth">Date of birth</string>
    <string name="map">Map</string>
    <string name="events">Events</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="profile">Profile</string>
    <string name="event_page">Event page</string>
    <string name="create_event">Create Event</string>
    <string name="date">Date</string>
    <string name="date1">Date(YYYY/MM/DD)</string>
    <string name="time">Time</string>
    <string name="time1">Time(HH:MM)</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="description">Description</string>
    <string name="price">Price: </string>
    <string name="category">Category</string>
    <string name="pick_category">Pick category</string>
    <string name="add_photos">Add photos to gallery</string>
    <string name="sort">Sort by</string>
    <string name="name">Name</string>
    <string name="distance">Distance</string>
    <string name="max_occupancy">Max occupancy</string>
    <string name="occupancy">Occupancy</string>
    <string name="rating">Rating</string>
    <string name="created_events">Created Events</string>
    <string name="rated_events">Rated Events</string>
    <string name="attended_events">Attended Events</string>
    <string name="my_events">My events</string>
    <string name="filter">Filter</string>
    <string name="asc">Ascending</string>
    <string name="desc">Descending</string>
    <string name="all_filters">All filters</string>
    <string name="distance_km">Distance(km)</string>
    <string name="time_day">Time of the day</string>
    <string name="day_week">Day of the week</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="san">Sunday</string>
    <string name="filter_friend">Filter by friend</string>
    <string name="selected">Selected</string>
    <string name="free">Free</string>
    <string name="paid">Paid</string>
    <string name="spec_req">Special requirement</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="categories">Categories</string>
    <string name="apply_filters">Apply filters</string>
    <string name="reset_all">Reset all</string>
    <string name="logout">Logout</string>
    <string name="gallery">Gallery</string>
    <string name="attendees">Attendees</string>
    <string name="view_all">View all</string>
    <string name="event_gallery">Event gallery</string>
    <string name="delete_image">Delete image</string>
    <string name="event_attendees">People attending event</string>
    <string name="edit_event">Edit event</string>
    <string name="morning">Morning (6am-12am)</string>
    <string name="afternoon">Afternoon (12am-6pm)</string>
    <string name="evening">Evening (6pm-12pm)</string>
    <string name="midnight">After midnight(12pm-6am)</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="enter_event_name">Enter event name</string>
    <string name="cancel">Cancel</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="view_event">View Event</string>
    <string name="count_me">Count me in</string>
    <string name="creator">You are the creator</string>
    <string name="already_attendee">You are already an attendee</string>
    <string name="event_full">Event Full</string>
    <string name="event_creator">Event Creator</string>
    <string name="points">Points</string>
    <string name="options">Options</string>
    <string name="add_friend">Add Friend</string>
    <string name="go_to_profile">Go to profile</string>
    <string name="pending_request">Pending requests</string>
    <string name="am_out">I\'m out</string>
    <string name="leaderboard">Leaderboard</string>

</resources>
