<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nb_map"
        android:title="@string/map"
        android:icon="@drawable/see_through_pointer"
        app:showAsAction="always" />
    <item android:id="@+id/nb_events"
        android:title="@string/events"
        android:checked="true"
        android:icon="@drawable/filled_event"
        app:showAsAction="always"/>
    <item android:id="@+id/nb_bookmarks"
        android:icon="@drawable/filled_bookmarks"
        android:title="@string/bookmarks"
        app:showAsAction="always"/>
    <item android:id="@+id/nb_profile"
        android:icon="@drawable/profile_filled"
        android:title="@string/profile"
        app:showAsAction="always"/>

</menu>