<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/filter_events"
        android:icon="@drawable/settings"
        app:showAsAction="never"
        android:title="@string/filter" />
    <item
        android:id="@+id/sort_by_events"
        android:icon="@drawable/sort"
        app:showAsAction="never"
        android:title="@string/sort" />
    <item
        android:id="@+id/asc_events"
        android:icon="@drawable/up_arrow"
        app:showAsAction="never"
        android:title="@string/asc" />
    <item
        android:id="@+id/desc_events"
        android:icon="@drawable/arrow_down"
        app:showAsAction="never"
        android:title="@string/desc" />

</menu>