<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="84dp"
        android:src="@drawable/empty_profile_picture_png_2"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Full name"
        android:textSize="28sp"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_full_name"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>
        <TextView
            android:id="@+id/profile_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"/>
        <TextView
            android:id="@+id/profile_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_birth"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>