<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/event_cover_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/pexels_photo_1190298"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/linear2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_cover_image">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/calendar" />

            <TextView
                android:id="@+id/event_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center"
                android:text="@string/date"
                android:textColor="@color/colorBlack"
                android:textSize="26sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/linear1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/linear3"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/meet_app_pointer"/>
            <TextView
                android:id="@+id/event_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center"
                android:text="@string/address"
                android:textSize="26sp"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear2">

            <RatingBar
                android:id="@+id/event_rating_stars"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:numStars="5" />

            <TextView
                android:id="@+id/event_rating"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center"
                android:text="@string/rating"
                android:textColor="@color/colorBlack"
                android:textSize="26sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/bottom_sheet_event"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>